multipass/k3s/03-apps/headlamp.test/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ingressClassName: traefik
  rules:
  - host: headlamp.multipass.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-headlamp
            port:
              number: 80
